--- a/src/pages/reserve/reserve.scss
+++ b/src/pages/reserve/reserve.scss
@@ -33,13 +33,12 @@
   }
 }
 
-.image-profile {
-  border-radius: 50%;
+.image-vehicle {
   border: solid;
-  width: 150px;
+  width: 350px;
 }
 
-.name-profile {
+.text-vehicule {
   margin-top: -10px;
 }
 
@@ -60,10 +59,6 @@
   bottom: 0;
 }
 
-.vehicle {
-  //height: auto;
-}
-
 .vehicle > img {
   height: 100%;
   width: 140px;
@@ -78,11 +73,7 @@
   float: left;
 }
 
-.vehicle > p {
+.text-vehicle {
   text-align: left;
-  padding-left: 150px;
-}
-
-.vehicle > div.but {
-  float: right;
+  font-size: 18px;
 }
